RavenDB-11045 Detect and warn about unsupported browsers

--- a/src/Raven.Studio/wwwroot/index.html
+++ b/src/Raven.Studio/wwwroot/index.html
@@ -44,6 +44,25 @@
             </p>
         </div>
     </div>
+    <div class="browser-alert">
+        <div class="browser-message">
+            <i class="icon-unsupported-browser icon-xl"></i>
+            <p class="lead margin-bottom">This browser is not supported and some features may not work correctly</p>
+            <p class="margin-bottom">To ensure best experience please use</p>
+            <div class="browser-links">
+                <a class="chrome" href="https://www.google.com/chrome/" target="_blank">
+                    <i class="icon-chrome icon-lg"></i>
+                    Google Chrome
+                </a>
+                <a class="firefox" href="https://www.mozilla.org/firefox/" target="_blank">
+                    <i class="icon-firefox icon-lg"></i>
+                    Mozilla Firefox
+                </a>
+            </div>
+            <button class="btn btn-default">Continue</button>
+        </div>
+        <div class="backdrop show"></div>
+    </div>
     <div id="applicationHost">        
     </div>
     <div class="processing-spinner"></div>
