RavenDB-11517 Make the tests count color fit well with the ravendb theme

--- a/test/Studio/test.html
+++ b/test/Studio/test.html
@@ -58,6 +58,12 @@
         define("knockout", [], function () { return ko; });
         define("jquery", [], function() { return jQuery; });
     </script>
+    
+    <style>
+        #mocha-stats em {
+            color: #15bb2e;
+        }
+    </style>
 </head>
 <body style="overflow: auto">
     <div id="mocha">
